[package]
name = "ziggurat"
version = "0.1.0"
authors = ["Niklas Long <niklas@equilibrium.co>, Mirko von Leipzig <mirko@equilibrium.co>", "Ziggurat contributors"]
edition = "2021"

[dependencies]
assert_matches = "1.5"
async-trait = "0.1.53"
bytes = "1"
hex = "0.4.3"
histogram = "0.6.9"
home = "0.5.3"
lazy_static = "1.4.0"
metrics = "0.20.0"
metrics-util = "0.14.0"
ordered-map = "0.4.2"
parking_lot = "0.12"
pea2pea = "0.40"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
spectre = { git = "https://github.com/niklaslong/spectre" }
tabled = "0.7"
time = "0.3"
toml = "0.5.8"

[dependencies.clap]
version = "3.2.7"
features = ["derive"]
optional = true

[dependencies.futures-util]
version = "0.3"
features = ["sink"]

[dependencies.jsonrpsee]
version = "0.15.0"
features = ["http-server"]
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]

[features]
crawler = ["clap", "jsonrpsee"]

[[bin]]
name = "crawler"
path = "src/tools/crawler/main.rs"
required-features = ["crawler"]
